# stable-marriage

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_preferences.json
docs/: experimental-couples.md
docs/internal/reviews/: review.codex.2026-04-18.md
docs/internal/todos/: todo.2026-04-17.md  todo.codex.2026-04-18.md
docs/reviews/: review.claude.2026-04-18.md  review.codex.2026-04-17.md
docs/todos/: todo.2026-04-18.md
scripts/: packaging_smoke.py
src/stable_marriage/: __init__.py  __main__.py  cli.py  core.py  solver.py  types.py  validation.py
src/stable_marriage/experimental/: __init__.py  _bases.py  _types.py  _validation.py  couples.py
tests/: __init__.py  test_cli.py  test_experimental_couples.py  test_solver.py
tests/fixtures/: __init__.py  couples.py  preferences.py  residency.py  worst_case.py
