[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-marriage"
version = "0.2.0"
description = "Pure-Python utilities for solving stable marriage problems."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["stable marriage", "gale shapley", "matching"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=4.0", "ruff>=0.2.0"]

[tool.ruff]
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
