[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-marriage"
version = "0.2.0"
description = "Pure-Python utilities for solving stable marriage problems."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["stable marriage", "gale shapley", "matching"]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[project.scripts]
stable-marriage = "stable_marriage.cli:main"

[tool.ruff]
target-version = "py311"

[tool.black]
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"

[tool.setuptools.packages.find]
where = ["src"]
